--- a/www/squid/Makefile
+++ b/www/squid/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.185 2006/12/04 21:50:53 jdolecek Exp $
+# $NetBSD: Makefile,v 1.186 2006/12/12 14:46:56 taca Exp $
 
-DISTNAME=	squid-2.6.STABLE6
-PKGNAME=	squid-2.6.6
+DISTNAME=	squid-2.6.STABLE7
+PKGNAME=	${DISTNAME:S/STABLE//}
 #PKGREVISION=
 CATEGORIES=	www
 MASTER_SITES=	http://www.squid-cache.org/Versions/v2/2.6/ \
