--- a/lang/classpath-gui/Makefile
+++ b/lang/classpath-gui/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2006/12/27 13:37:38 joerg Exp $
+# $NetBSD: Makefile,v 1.13 2007/01/05 16:48:58 obache Exp $
 
 .include "../../lang/classpath/Makefile.common"
 
@@ -16,8 +16,13 @@ INSTALL_DIRS=	native/jni/gtk-peer
 BUILDLINK_FILES.libart2+=	bin/libart2-config
 BUILDLINK_TRANSFORM.libart2+=	-e 's|/libart2-config|/libart-config|g'
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../graphics/libart2/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../x11/libXtst/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
