--- a/multimedia/vlc07/Makefile
+++ b/multimedia/vlc07/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2007/01/07 12:25:55 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2007/01/13 07:30:36 wiz Exp $
 #
 
 DISTNAME=		vlc-${VLC_VER}
@@ -95,6 +95,7 @@ BUILDLINK_TRANSFORM.ffmpeg+=	-e "s,include/ffmpeg,include/,g"
 .include "../../multimedia/libogg/buildlink3.mk"
 .include "../../net/openslp/buildlink3.mk"
 .include "../../sysutils/vcdimager-devel/buildlink3.mk"
+.include "../../x11/libXv/buildlink3.mk"
 .include "../../x11/wxGTK/buildlink3.mk"
 
 .include "../../mk/oss.buildlink3.mk"
