--- a/databases/myodbc/Makefile
+++ b/databases/myodbc/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.14 2006/02/05 23:08:32 joerg Exp $
+# $NetBSD: Makefile,v 1.15 2006/03/04 21:29:08 jlam Exp $
 #
 
 DISTNAME=	mysql-connector-odbc-3.51.12
 PKGNAME=	${DISTNAME:S/mysql-connector-odbc/myodbc/}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	databases
 MASTER_SITES=	${MASTER_SITE_MYSQL:=MyODBC3/}
 
