--- a/sysutils/rdiff-backup/Makefile
+++ b/sysutils/rdiff-backup/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.24 2006/04/06 06:22:46 reed Exp $
+# $NetBSD: Makefile,v 1.25 2006/04/17 18:39:58 recht Exp $
 #
 
-DISTNAME=	rdiff-backup-1.0.4
+DISTNAME=	rdiff-backup-1.0.5
 CATEGORIES=	sysutils net
 MASTER_SITES=	http://savannah.nongnu.org/download/rdiff-backup/
 
