--- a/textproc/p5-SGMLS/Makefile
+++ b/textproc/p5-SGMLS/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2006/01/13 18:15:09 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2006/03/04 21:30:48 jlam Exp $
 #
 
 DISTNAME=		SGMLSpm-1.03ii
@@ -15,6 +15,8 @@ WRKSRC=			${WRKDIR}/SGMLSpm
 MAKE_ENV+=		PERL5_SUB_INSTALLVENDORLIB=${PERL5_SUB_INSTALLVENDORLIB:Q}
 MAKE_ENV+=		PERL5=${PERL5:Q}
 PLIST_SUBST+=		PERL5_SUB_INSTALLVENDORLIB=${PERL5_SUB_INSTALLVENDORLIB:Q}
+
+PERL5_USE_PACKLIST=	no
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
