--- a/graphics/digikamimageplugins/Makefile
+++ b/graphics/digikamimageplugins/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2006/11/29 12:02:10 xtraeme Exp $
+# $NetBSD: Makefile,v 1.19 2007/01/02 20:17:15 xtraeme Exp $
 
 DISTNAME=		digikamimageplugins-0.9.0
 CATEGORIES=		graphics kde
@@ -16,7 +16,12 @@ USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
 MANCOMPRESSED=		yes
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../graphics/digikam/buildlink3.mk"
 .include "../../meta-pkgs/kde3/kde3.mk"
 .include "../../x11/kdelibs3/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
