--- a/chat/gg2/Makefile
+++ b/chat/gg2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2006/07/31 09:06:54 adam Exp $
+# $NetBSD: Makefile,v 1.23 2006/10/24 19:19:22 adam Exp $
 
 DISTNAME=	gg2-2.3.0
 CATEGORIES=	chat
@@ -29,6 +29,9 @@ CONFIGURE_ARGS+=	--without-update
 .include "../../chat/loudmouth/buildlink3.mk"
 .include "../../security/openssl/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libXScrnSaver/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../x11/xosd/buildlink3.mk"
 
 .include "../../mk/oss.buildlink3.mk"
