--- a/x11/gst-plugins0.10-x11/Makefile
+++ b/x11/gst-plugins0.10-x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2006/02/05 23:11:34 joerg Exp $
+# $NetBSD: Makefile,v 1.3 2006/03/12 12:42:05 jmmv Exp $
 #
 
 GST_PLUGINS0.10_NAME=	x11
@@ -7,5 +7,5 @@ GST_PLUGINS0.10_FLAGS=	x xshm xvideo
 
 .include "../../multimedia/gst-plugins0.10-base/Makefile.common"
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libXv/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
