--- a/security/kssh/Makefile
+++ b/security/kssh/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.21 2006/03/04 21:30:34 jlam Exp $
+# $NetBSD: Makefile,v 1.22 2006/04/17 13:46:47 wiz Exp $
 #
 
 DISTNAME=	kssh-0.7
@@ -15,7 +15,12 @@ USE_LANGUAGES=	c c++
 USE_LIBTOOL=	YES
 GNU_CONFIGURE=	YES
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../meta-pkgs/kde3/kde3.mk"
 .include "../../net/kdenetwork3/buildlink3.mk"
 .include "../../x11/kdelibs3/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
