--- a/graphics/gle/Makefile
+++ b/graphics/gle/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.23 2006/02/05 23:09:31 joerg Exp $
+# $NetBSD: Makefile,v 1.24 2006/03/04 21:29:48 jlam Exp $
 #
 
 DISTNAME=	gle-3.1.0
@@ -20,5 +20,5 @@ USE_LIBTOOL=		YES
 LIBS+=			-lXext
 
 .include "../../graphics/Mesa/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libXi/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
