--- a/x11/xscreensaver/Makefile.common
+++ b/x11/xscreensaver/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.93 2006/12/15 20:33:06 joerg Exp $
+# $NetBSD: Makefile.common,v 1.94 2007/01/08 21:45:10 drochner Exp $
 #
 
 # When updating the package, and screensavers are removed,
@@ -67,5 +67,3 @@ GCC_REQD+=		2.95.3
 .include "../../graphics/gle/buildlink3.mk"
 .include "../../graphics/jpeg/buildlink3.mk"
 .include "../../x11/libXrandr/buildlink3.mk"
-
-.include "../../mk/x11.buildlink3.mk"
