--- a/x11/gnustep-gui/Makefile
+++ b/x11/gnustep-gui/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.34 2006/08/30 14:55:28 adam Exp $
+# $NetBSD: Makefile,v 1.35 2006/09/22 07:08:16 rillig Exp $
 
 DISTNAME=	gnustep-gui-0.11.0
+PKGREVISION=	1
 CATEGORIES=	x11 gnustep
 MASTER_SITES=	${MASTER_SITE_GNUSTEP:=core/}
 
@@ -21,5 +22,4 @@ MAKE_FILE=	GNUmakefile
 .include "../../graphics/png/buildlink3.mk"
 .include "../../graphics/tiff/buildlink3.mk"
 .include "../../mk/pthread.buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
