--- a/textproc/doclifter/Makefile
+++ b/textproc/doclifter/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2006/02/05 23:11:01 joerg Exp $
+# $NetBSD: Makefile,v 1.16 2006/03/11 04:43:28 reed Exp $
 #
 
-DISTNAME=	doclifter-2.1
-PKGREVISION=	1
+DISTNAME=	doclifter-2.3
 CATEGORIES=	textproc
 MASTER_SITES=	http://catb.org/~esr/doclifter/
 
