--- a/devel/apache-ant/Makefile
+++ b/devel/apache-ant/Makefile
@@ -1,12 +1,7 @@
-# $NetBSD: Makefile,v 1.19 2006/02/05 23:08:39 joerg Exp $
+# $NetBSD: Makefile,v 1.20 2006/04/26 15:02:19 tv Exp $
 #
-# NOTE: if you are depending on ant from another package, please be aware that
-# the ant team has CHANGED the version numbering scheme.  A previous version
-# of ant was 3.1.  Do NOT use dependency patterns such as >=1.3 which could pick
-# up this version by mistake.
 
-DISTNAME=	apache-ant-1.6.5
-PKGREVISION=	2
+DISTNAME=	apache-ant-1.7.0
 CATEGORIES=	devel java
 MASTER_SITES=	${MASTER_SITE_APACHE:=ant/binaries/}
 EXTRACT_SUFX=	.tar.bz2
