--- a/net/x2vnc/Makefile
+++ b/net/x2vnc/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.12 2006/02/05 23:10:33 joerg Exp $
+# $NetBSD: Makefile,v 1.13 2006/11/24 23:04:14 wiz Exp $
 #
 
-DISTNAME=       	x2vnc-1.5.1
-PKGREVISION=		3
+DISTNAME=       	x2vnc-1.7.2
 CATEGORIES=		net x11
-MASTER_SITES=   	http://fredrik.hubbe.net/
+MASTER_SITES=   	http://fredrik.hubbe.net/x2vnc/
 
 MAINTAINER=	 	pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://fredrik.hubbe.net/x2vnc.html
@@ -12,5 +11,6 @@ COMMENT=		Multi-console display using X and VNC
 
 GNU_CONFIGURE=		yes
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
+
