--- a/textproc/libxslt/Makefile
+++ b/textproc/libxslt/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.71 2006/11/21 23:55:05 recht Exp $
+# $NetBSD: Makefile,v 1.72 2006/11/22 17:09:33 ghen Exp $
 
-DISTNAME=	libxslt-1.1.18
-PKGREVISION=	1
+DISTNAME=	libxslt-1.1.19
 CATEGORIES=	textproc
 MASTER_SITES=	ftp://xmlsoft.org/libxslt/
 #MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libxslt/1.1/}
