--- a/wm/jwm/Makefile
+++ b/wm/jwm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2007/01/05 16:56:54 abs Exp $
+# $NetBSD: Makefile,v 1.6 2007/01/16 11:20:25 abs Exp $
 #
 
 DISTNAME=		jwm-1.8
@@ -32,6 +32,11 @@ CONF_FILES= 		${EGDIR}/system.jwmrc ${PKG_SYSCONFDIR}/system.jwmrc
 
 .include "options.mk"
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../x11/libXft/buildlink3.mk"
 .include "../../x11/libXpm/buildlink3.mk"
+.include "../../x11/libXinerama/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
+.include "../../x11/xextproto/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
