--- a/sysutils/dbus/Makefile
+++ b/sysutils/dbus/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.21 2006/12/17 15:39:33 jmmv Exp $
+# $NetBSD: Makefile,v 1.22 2007/01/10 08:35:57 abs Exp $
 #
 
 DISTNAME=	dbus-1.0.2
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	sysutils
 MASTER_SITES=	http://dbus.freedesktop.org/releases/dbus/
 
