--- a/games/neverball/Makefile
+++ b/games/neverball/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2006/04/17 13:46:29 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2006/06/12 16:28:10 wiz Exp $
 #
 
 DISTNAME=	neverball-1.4.0
@@ -13,8 +13,8 @@ COMMENT=	Part puzzle game, part action game and with SDL graphics
 USE_TOOLS+=	gmake
 
 # Avoiding multiples patches...
-BUILDLINK_TRANSFORM.SDL+=	-e "s|/SDL/|/|g"
-BUILDLINK_TRANSFORM.SDL_ttf+=	-e "s|/SDL/|/|g"
+BUILDLINK_FNAME_TRANSFORM.SDL+=	-e "s|/SDL/|/|g"
+BUILDLINK_FNAME_TRANSFORM.SDL_ttf+=	-e "s|/SDL/|/|g"
 
 SHAREDIR=	${PREFIX}/share/${PKGBASE}
 
