--- a/multimedia/vlc/Makefile
+++ b/multimedia/vlc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.41 2007/01/13 07:32:36 wiz Exp $
+# $NetBSD: Makefile,v 1.42 2007/01/13 10:46:34 joerg Exp $
 #
 
 DISTNAME=		vlc-${VLC_VER}
@@ -85,7 +85,7 @@ SUBST_SED.fnt=		-e "s,${ORIGFNT},${DEFAULT_FONT},"
 SUBST_FILES.fnt=	modules/misc/freetype.c
 SUBST_MESSAGE.fnt=	Fixing hardcoded paths.
 
-BUILDLINK_TRANSFORM.ffmpeg+=	-e "s,include/ffmpeg,include/,g"
+BUILDLINK_FNAME_TRANSFORM.ffmpeg+=	-e "s,include/ffmpeg,include/,g"
 
 .if ${OPSYS} == "NetBSD"
 PLIST_SUBST+=		COND_CDDA="@comment "
