--- a/print/poppler/Makefile
+++ b/print/poppler/Makefile
@@ -1,7 +1,9 @@
-# $NetBSD: Makefile,v 1.18 2006/05/31 18:13:54 drochner Exp $
+# $NetBSD: Makefile,v 1.19 2006/07/07 15:49:33 jlam Exp $
 #
 
 .include "../../print/poppler/Makefile.common"
+
+PKGREVISION=	1
 
 COMMENT=		PDF rendering library
 
