--- a/x11/Makefile
+++ b/x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.468 2007/01/16 21:33:25 joerg Exp $
+# $NetBSD: Makefile,v 1.469 2007/01/16 22:53:08 kristerw Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -319,6 +319,7 @@ SUBDIR+=	x2x
 SUBDIR+=	x3270
 SUBDIR+=	xaniroc
 SUBDIR+=	xautolock
+SUBDIR+=	xauth
 SUBDIR+=	xbanner
 SUBDIR+=	xbindkeys
 SUBDIR+=	xbindkeys-tk
