--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.384 2006/12/20 17:44:15 joerg Exp $
+# $NetBSD: Makefile,v 1.385 2007/01/10 10:43:11 drochner Exp $
 #
 
 COMMENT=	System utilities
@@ -30,6 +30,7 @@ SUBDIR+=	bbsload
 SUBDIR+=	bchunk
 SUBDIR+=	bcmfw
 SUBDIR+=	bkpupsd
+SUBDIR+=	bsign
 SUBDIR+=	btpin-qt
 SUBDIR+=	burn
 SUBDIR+=	ccd2iso
