--- a/x11/xneko/Makefile
+++ b/x11/xneko/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2006/06/28 05:01:12 rillig Exp $
+# $NetBSD: Makefile,v 1.25 2007/01/15 18:14:52 joerg Exp $
 
 DISTNAME=	xneko
 PKGNAME=	xneko-4.4
@@ -16,8 +16,7 @@ PLIST_SRC=	${WRKDIR}/PLIST
 
 BUILD_DEFS+=	MANINSTALL
 
-MAKE_ENV+=	BINOWN=${BINOWN:Q} BINGRP=${BINGRP:Q}
-MAKE_ENV+=	MANOWN=${MANOWN:Q} MANGRP=${MANGRP:Q}
+USE_BSD_MAKEFILE=	yes
 
 INSTALLATION_DIRS+=	${PKGMANDIR}/cat6 ${PKGMANDIR}/man6
 
