--- a/mail/mailman/files/mailman.conf.dist
+++ b/mail/mailman/files/mailman.conf.dist
@@ -1,4 +1,4 @@
-# $NetBSD: squirrelmail.conf.dist,v 1.3 2002/01/07 11:49:45 jlam Exp $
+# $NetBSD: mailman.conf.dist,v 1.1.1.1 2002/08/23 15:28:17 bouyer Exp $
 #
 # Mailman configuration file fragment for Apache
 
@@ -16,7 +16,7 @@
 </Directory>
 
 <Directory "@EXECDIR@/icons">
-        Options none
+    Options none
     AllowOverride FileInfo AuthConfig Limit
     Order allow,deny
     Allow from all
