--- a/x11/xfce4-toys/Makefile
+++ b/x11/xfce4-toys/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2006/02/05 23:11:46 joerg Exp $
+# $NetBSD: Makefile,v 1.15 2006/04/17 13:46:14 wiz Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
@@ -7,6 +7,11 @@ PKGREVISION=	3
 CATEGORIES=	x11
 COMMENT=	Xfce toys
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../textproc/libxml2/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../x11/xfce4-panel/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
