--- a/wm/xfce4-wm/Makefile
+++ b/wm/xfce4-wm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2006/04/17 13:46:13 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2006/12/15 20:33:03 joerg Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
@@ -10,7 +10,12 @@ PKGREVISION=	4
 CATEGORIES=	wm
 COMMENT=	Xfce window manager
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../x11/libXpm/buildlink3.mk"
 .include "../../x11/xfce4-mcs-plugins/buildlink3.mk"
 .include "../../x11/startup-notification/buildlink3.mk"
