--- a/x11/compositeproto/Makefile
+++ b/x11/compositeproto/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2006/07/22 04:46:19 rillig Exp $
+# $NetBSD: Makefile,v 1.4 2006/11/03 17:09:27 joerg Exp $
 #
 
-DISTNAME=		compositeproto-0.3
+DISTNAME=		compositeproto-0.3.1
 CATEGORIES=		x11
 MASTER_SITES=		http://xorg.freedesktop.org/releases/individual/proto/
 
