--- a/devel/autoconf/Makefile
+++ b/devel/autoconf/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.63 2006/11/03 07:12:51 joerg Exp $
+# $NetBSD: Makefile,v 1.64 2006/12/04 13:25:04 wiz Exp $
 
 DISTNAME=		autoconf-2.61
 CATEGORIES=		devel
@@ -21,6 +21,7 @@ PKG_DESTDIR_SUPPORT=	user-destdir
 USE_LANGUAGES=		# empty
 GNU_CONFIGURE=		YES
 CONFIGURE_ARGS+=	--without-lispdir
+MAKE_JOBS_SAFE=		no
 
 TEXINFO_REQD=		4.0
 INFO_FILES=		YES
